--- a/Analytical searchable stars (Fig 6).ipynb
+++ b/Analytical searchable stars (Fig 6).ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import CubicSpline\n",
