--- a/Python scripts/Query for observationally relevant stars.ipynb
+++ b/Python scripts/Query for observationally relevant stars.ipynb
@@ -522,6 +522,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac2c8f74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to calculate stellar mass from absolute G-band magnitude\n",
+    "def calc_mass(absGmag, coeff=np.array([1.20033777e-04, -4.30031339e-03, 4.91558001e-02, -2.95299176e-01, 6.90972711e-01])):\n",
+    "    return 10**np.polyval(mass_coeff, absGmag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d28bad49",
    "metadata": {},
    "outputs": [],
